CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/sfrosit_t_adjmt_addr_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_adjmt_addr_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_adjmt_addr_hist</externalName>
    <label>Adjustment Address History</label>
    <pluralLabel>Adjustment Address History</pluralLabel>
</CustomObject>