CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/adr_city__c.field-meta.xml
<CustomField>
    <fullName>adr_city__c</fullName>
    <description>adr_city</description>
    <externalDeveloperName>adr_city</externalDeveloperName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>