CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/adr_state__c.field-meta.xml
<CustomField>
    <fullName>adr_state__c</fullName>
    <description>adr_state</description>
    <externalDeveloperName>adr_state</externalDeveloperName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>