CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/adr_zip_main__c.field-meta.xml
<CustomField>
    <fullName>adr_zip_main__c</fullName>
    <description>adr_zip_main</description>
    <externalDeveloperName>adr_zip_main</externalDeveloperName>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>