CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/cde_type_addr__c.field-meta.xml
<CustomField>
    <fullName>cde_type_addr__c</fullName>
    <description>cde_type_addr</description>
    <externalDeveloperName>cde_type_addr</externalDeveloperName>
    <label>Address type code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>