CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/idn_addr_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_addr_adjmt__c</fullName>
    <description>idn_addr_adjmt</description>
    <externalDeveloperName>idn_addr_adjmt</externalDeveloperName>
    <label>Address adjustment ID</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT_ADDR__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT_ADDR__c</referenceTo>
    <relationshipLabel>Adjustment Address Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_adjmt_addr_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>