CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_addr_hist__x/fields/idn_addr_adjmt_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_addr_adjmt_hist__c</fullName>
    <description>idn_addr_adjmt_hist</description>
    <externalDeveloperName>idn_addr_adjmt_hist</externalDeveloperName>
    <label>Address adjustment hist ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>